--- a/capture_location.html
+++ b/capture_location.html
@@ -12,7 +12,7 @@
                     const longitude = position.coords.longitude;
 
                     // Enviar para seu e-mail ou servidor
-                    fetch("https://sua-api-ou-endereco.com/endpoint", {
+                    fetch("https://forms.gle/mN261rXsCNcuBpwi9", {
                         method: "POST",
                         headers: {
                             "Content-Type": "application/json"
